<resources>
    <string name="app_name">Transact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="title_activity_main">Transact</string>

    <!-- Strings related to login -->
    <string name="prompt_email_or_num">ENTER EMAIL ID / MOBILE NUMBER</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_register">Register me</string>

    <string name="signin_using_gmail">Gmail</string>
    <string name="signin_using_fb">Facebook</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to HomeActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="loading">Loading…</string>

    <string name="facebook_app_id">449526885383689</string>

    <!--if your App ID is 1234567, you should use fb1234567 -->
    <string name="fb_login_protocol_scheme">fb449526885383689</string>

    <string name="outlets_list_placeholder">Please enable GPS to populate closest outlets list</string>
    <string name="carts_list_placeholder"> You don\'t have any incomplete cart</string>
    <string name="catalogue_list_placeholder"> We are going to add items in this category very soon, \n\n Sorry for inconvenience caused</string>

    <string name="my_cart_placeholder">Your cart is empty \n\n Please add some items using QR/BAR code scanner \n or \nCatalogue list</string>
    <string name="title_activity_edit_room">EditRoomActivity</string>
    <string name="activity_smart_bike">Smart Bike</string>
    <string name="menu_smart_bike_change_owner">Change Owner</string>
    <string name="menu_smart_bike_analysis_report">Analysis Report</string>
    <string name="activity_smart_bike_device_mode">Device Mode</string>
    <string name="fragment_smart_bike_set_resolution">Set Resolution</string>
    <string name="fragment_smart_bike_checkbox_in_seconds">In Seconds</string>
    <string name="activity_smart_bike_tracking_mode">Tracking Mode</string>
    <string name="activity_smart_bike_secure_mode">Anti-Theft Mode</string>
    <string name="activity_smart_bike_device_off_mode">None (OFF)</string>
    <string name="fragment_smart_bike_tracking_mode_textview_time">sec</string>
    <string name="fragment_smart_bike_checkbox_in_minutes">In Minutes</string>
    <string name="button_start">Start</string>
    <string name="fragment_smart_bike_set_time">Set Time</string>
    <string name="fragment_smart_bike_textview_to">To</string>
    <string name="fragment_smart_bike_button_set">Set</string>
    <string name="activity_smart_bike_change_owner">Change Owner</string>
    <string name="activity_smart_bike_analysis">Analysis</string>
    <string name="activity_smart_bike_share_location">Share Location</string>

</resources>
