<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.algo.transact.login.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="REGISTER"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <EditText
        android:id="@+id/register_user_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Name"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/register_user_et_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile number"
        android:inputType="phone"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <AutoCompleteTextView
        android:id="@+id/register_user_actv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email id"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/register_user_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/register_user_bt_sign_up"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:layout_weight=".5"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />

</LinearLayout>
