<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    android:orientation="vertical"
    android:weightSum="10">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/home_page_sections_margin"
        android:layout_marginRight="@dimen/home_page_sections_margin"
        android:layout_marginTop="@dimen/home_page_sections_margin"
        android:layout_weight="4"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/home_page_smart_cards_padding_top"
                android:paddingBottom="@dimen/home_page_smart_cards_padding_top"
                android:paddingTop="@dimen/home_page_smart_cards_padding_top"
                android:text="@string/activity_smart_bike_device_mode"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/home_page_smart_cards_padding"
                android:orientation="vertical"
                android:paddingBottom="@dimen/home_page_smart_cards_padding_top"
                android:paddingTop="@dimen/home_page_smart_cards_padding_top">

                <RadioButton
                    android:id="@+id/activity_smart_bike_checkbox_secure_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/home_page_smart_cards_padding_top"
                    android:text="@string/activity_smart_bike_secure_mode"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/activity_smart_bike_checkbox_tracking_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/home_page_smart_cards_padding_top"
                    android:text="@string/activity_smart_bike_tracking_mode"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/activity_smart_bike_checkbox_off_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/home_page_smart_cards_padding_top"
                    android:text="@string/activity_smart_bike_device_off_mode"
                    android:textSize="15sp" />
            </RadioGroup>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/home_page_sections_margin"
        android:layout_marginLeft="@dimen/home_page_sections_margin"
        android:layout_marginRight="@dimen/home_page_sections_margin"
        android:layout_marginTop="@dimen/home_page_sections_margin"
        android:layout_weight="6"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp">

        <FrameLayout
            android:id="@+id/acitivty_smart_bike_layout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_page_bottom_background_color"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:id="@+id/home_ll_home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/activity_smart_bike_tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_normal"
                android:gravity="center"
                android:text="Home"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/home_page_text_color_normal"
                android:textSize="@dimen/app_text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_ll_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/activity_smart_bike_tv_share_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_share_location"
                android:gravity="center"
                android:text="@string/activity_smart_bike_share_location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/home_page_text_color_normal"
                android:textSize="@dimen/app_text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_ll_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/content_main_home_tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_analysis"
                android:gravity="center"
                android:text="@string/activity_smart_bike_analysis"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/home_page_text_color_normal"
                android:textSize="@dimen/app_text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_ll_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/content_main_home_tv_updates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_change_owner"
                android:gravity="center"
                android:text="@string/activity_smart_bike_change_owner"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/home_page_text_color_normal"
                android:textSize="@dimen/app_text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>